code cleanup and files and packages renaming