@@ -1,7 +1,7 @@
 package com.github.maleksandrowicz93.cqrsdemo.student;
 
-import com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.CommandHandlerResult;
-import com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.CommandHandlerResultFactory;
+import com.github.maleksandrowicz93.cqrsdemo.student.api.result.ApiResult;
+import com.github.maleksandrowicz93.cqrsdemo.student.api.result.ApiResultFactory;
 import com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.SaveStudentRequest;
 import com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.StudentDto;
 import com.github.maleksandrowicz93.cqrsdemo.student.port.outgoing.SecurityService;
@@ -14,14 +14,14 @@ import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 
-import static com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.ResultCode.INVALID_CREDENTIALS;
-import static com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.ResultCode.OK;
-import static com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.ResultCode.STUDENT_ALREADY_EXISTS;
-import static com.github.maleksandrowicz93.cqrsdemo.student.port.incoming.ResultProperty.CONFLICTED_ID;
+import static com.github.maleksandrowicz93.cqrsdemo.student.api.result.ResultCode.INVALID_CREDENTIALS;
+import static com.github.maleksandrowicz93.cqrsdemo.student.api.result.ResultCode.OK;
+import static com.github.maleksandrowicz93.cqrsdemo.student.api.result.ResultCode.STUDENT_ALREADY_EXISTS;
+import static com.github.maleksandrowicz93.cqrsdemo.student.api.result.ResultProperty.CONFLICTED_ID;
 
 @Slf4j
 @Component
@@ -32,10 +32,10 @@ class AddStudentCommandHandler {
     StudentQueryRepository studentQueryRepository;
     StudentWriteRepository studentWriteRepository;
     StudentMapper studentMapper;
-    CommandHandlerResultFactory<StudentDto> resultFactory;
+    ApiResultFactory<StudentDto> resultFactory;
     SecurityService securityService;
 
-    CommandHandlerResult<StudentDto> handle(SaveStudentRequest saveStudentRequest) {
+    ApiResult<StudentDto> handle(SaveStudentRequest saveStudentRequest) {
         var email = saveStudentRequest.email();
         if (StringUtils.isBlank(email)) {
             log.error("Email should not be blank.");
@@ -47,13 +47,13 @@ class AddStudentCommandHandler {
         }
         Optional<UUID> id = studentQueryRepository.findStudentIdByEmail(email);
         if (id.isPresent()) {
-            var properties = Collections.singletonMap(CONFLICTED_ID, id.get().toString());
+            var properties = Map.of(CONFLICTED_ID, id.get().toString());
             return resultFactory.create(STUDENT_ALREADY_EXISTS, properties);
         }
         var student = studentMapper.toStudent(saveStudentRequest)
                 .password(securityService.encodePassword(saveStudentRequest.password()));
         var savedStudent = studentWriteRepository.save(student);
         var studentDto = studentMapper.toStudentDto(savedStudent);
-        return resultFactory.create(studentDto, OK);
+        return resultFactory.create(OK, studentDto);
     }
 }
